--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,6 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "prettier.semi": true,
-  "prettier.printWidth": 100
+  "prettier.semi": true
+  // "prettier.printWidth": 100
 }
