--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-VITE_APP_ROUTER_PREFIX = '/your-project-name'
+VITE_APP_ROUTER_PREFIX = 'your-project-name'
 VITE_APP_OUTPUT = './dist/your-project-name'
