--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,16 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:vue/vue3-essential"
+    "plugin:vue/vue3-recommended",
+    "@vue/eslint-config-typescript",
+    "@vue/eslint-config-prettier"
   ],
-  "parser": "vue-eslint-parser",
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "parser": "@typescript-eslint/parser",
-    "sourceType": "module"
+    "ecmaVersion": "latest"
   },
   "plugins": ["@typescript-eslint", "vue", "only-warn"],
   "rules": {
-    "@typescript-eslint/no-explicit-any": ["off"]
+    "@typescript-eslint/no-explicit-any": ["off"],
+    "vue/multi-word-component-names": "off"
   }
 }
