--- a/package.json
+++ b/package.json
@@ -18,28 +18,34 @@
   "dependencies": {
     "@vue/tsconfig": "^0.5.1",
     "@vueuse/core": "^10.9.0",
-    "czg": "^1.9.1",
+    "@vitejs/plugin-vue": "^5.0.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "4.2.5"
+    "@element-plus/icons-vue": "^2.3.1",
+    "vue-router": "4.2.5",
+    "lodash-es": "^4.17.21",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "postcss-preset-env": "^9.5.4",
+    "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.23",
-    "@vitejs/plugin-vue": "^5.0.4",
     "commitizen": "^4.3.0",
     "cz-git": "^1.8.0",
+    "czg": "^1.9.1",
     "eslint": "^8.57.0",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-vue": "^9.19.2",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "prettier-plugin-tailwindcss": "^0.5.13",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.2",
     "pnpm": "^8.15.4",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3",
     "unplugin-auto-import": "^0.17.5",
+    "unplugin-element-plus": "^0.8.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.4"
   },
