--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "your-project-name",
+  "name": "supply-chain-brain",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite --mode dev",
@@ -15,39 +15,37 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "@vitejs/plugin-vue": "^5.0.4",
     "@tabler/icons-vue": "^2.47.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
-    "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
-    "postcss-preset-env": "^9.5.4",
-    "tailwindcss": "^3.3.6",
-    "vue": "^3.4.21",
+    "postcss-preset-env": "^9.5.6",
+    "radash": "^12.1.0",
+    "tailwindcss": "^3.4.3",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "vue": "^3.4.23",
     "vue-router": "4.2.5"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.11.23",
+    "@types/node": "^20.12.7",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "commitizen": "^4.3.0",
-    "cz-git": "^1.8.0",
+    "cz-git": "^1.9.1",
     "czg": "^1.9.1",
     "eslint": "^8.57.0",
     "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-vue": "^9.19.2",
+    "eslint-plugin-vue": "^9.25.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.2",
-    "prettier-plugin-tailwindcss": "^0.5.13",
-    "typescript": "^5.3.3",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-element-plus": "^0.8.0",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.1.4"
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "sass": "^1.75.0",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.9"
   },
   "lint-staged": {
     "*.{ts,js,vue}": "eslint --fix"
