docs: :memo: update readme.md

--- a/.env.pre
+++ b/.env.pre
@@ -1,4 +1,4 @@
-VITE_ENV = 'development'
-VITE_ENV_SIGN = '(DEV)'
+VITE_ENV = 'prerelease'
+VITE_ENV_SIGN = '(PRE)'
 VITE_PREFIX_URL = 'http://xxx.xxx.xxx.xxx'
 VITE_APP_SOURCEMAP = true
