--- a/package.json
+++ b/package.json
@@ -11,43 +11,43 @@
     "eslint": "eslint src --ext .js,.vue,.ts,.jsx,.tsx --ignore-path .gitignore --fix",
     "preview": "vite preview",
     "cz": "git add . && czg",
-    "format-code": "bash .husky/format-code.sh",
+    "type-check": "tsc  --noemit",
     "prepare": "husky install"
   },
   "dependencies": {
     "@tabler/icons-vue": "^2.47.0",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue": "^5.2.0",
     "@vue/tsconfig": "^0.5.1",
-    "@vueuse/core": "^10.9.0",
-    "axios": "^1.6.8",
-    "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.1",
-    "postcss-preset-env": "^9.5.6",
+    "@vueuse/core": "^10.11.1",
+    "axios": "^1.7.7",
+    "pinia": "^2.2.6",
+    "pinia-plugin-persistedstate": "^3.2.3",
+    "postcss-preset-env": "^9.6.0",
     "radash": "^12.1.0",
-    "tailwindcss": "^3.4.3",
-    "unplugin-auto-import": "^0.17.5",
+    "tailwindcss": "^3.4.14",
+    "unplugin-auto-import": "^0.17.8",
     "unplugin-vue-components": "^0.26.0",
-    "vue": "^3.4.23",
+    "vue": "^3.5.12",
     "vue-router": "4.2.5"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@types/node": "^20.17.6",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
-    "commitizen": "^4.3.0",
-    "@commitlint/cli": "^19.2.2",
-    "@commitlint/config-conventional": "^19.2.2",
-    "cz-git": "^1.9.1",
-    "czg": "^1.9.1",
-    "eslint": "^8.57.0",
+    "commitizen": "^4.3.1",
+    "cz-git": "^1.11.0",
+    "czg": "^1.11.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-vue": "^9.25.0",
+    "eslint-plugin-vue": "^9.31.0",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.2",
+    "lint-staged": "^15.2.10",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "sass": "^1.75.0",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.9"
+    "sass": "^1.80.7",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.11"
   },
   "lint-staged": {
     "*.{ts,js,vue}": "eslint --fix"
