--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "project-name",
-  "private": true,
-  "version": "0.0.1",
   "type": "module",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "vite --mode dev",
     "prod": "vite --mode prod",
     "build:dev": "vite build --mode dev",
     "build:prod": "vite build --mode prod",
-    "eslint": "eslint src --ext .js,.vue,.ts,.jsx,.tsx --ignore-path .gitignore --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "cz": "git add . && czg",
     "type-check": "tsc  --noemit",
@@ -31,6 +32,7 @@
     "vue-router": "4.2.5"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.9.1",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@types/node": "^20.17.6",
@@ -39,8 +41,8 @@
     "commitizen": "^4.3.1",
     "cz-git": "^1.11.0",
     "czg": "^1.11.0",
-    "eslint": "^8.57.1",
-    "eslint-plugin-only-warn": "^1.1.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-vue": "^9.31.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.10",
