build: :package: 构建打包

--- a/.env.pre
+++ b/.env.pre
@@ -1,4 +1,5 @@
 VITE_ENV = 'prerelease'
 VITE_ENV_SIGN = '(PRE)'
+VITE_ENV_SIGN_ZH = '[预发]'
 VITE_PREFIX_URL = 'http://xxx.xxx.xxx.xxx'
 VITE_APP_SOURCEMAP = true
