--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,5 @@
 VITE_ENV = 'development'
 VITE_ENV_SIGN = '(DEV)'
+VITE_ENV_SIGN_ZH = '[测试]'
 VITE_PREFIX_URL = 'http://xxx.xxx.xxx.xxx'
 VITE_APP_SOURCEMAP = true
