--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,5 @@
 VITE_ENV = 'production'
 VITE_ENV_SIGN = ''
+VITE_ENV_SIGN_ZH = '[生产]'
 VITE_PREFIX_URL = 'http://xxx.xxx.xxx.xxx'
 VITE_APP_SOURCEMAP = false
