--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/tsconfig": "^0.5.1",
     "@vueuse/core": "^10.11.1",
     "axios": "^1.7.7",
+    "element-plus": "^2.9.2",
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^3.2.3",
     "postcss-preset-env": "^9.6.0",
