feat: :sparkles: update tailwindcss to v4.1

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   },
   "dependencies": {
     "@tabler/icons-vue": "^3.34.0",
+    "@tailwindcss/vite": "^4.1.11",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
     "@vueuse/core": "^13.4.0",
     "axios": "^1.10.0",
     "element-plus": "^2.10.2",
     "pinia": "^3.0.3",
-    "postcss-preset-env": "^10.2.4",
     "radash": "^12.1.1",
     "tailwindcss": "^4.1.11",
     "unplugin-auto-import": "^19.3.0",
