feat: 添加项目基础功能模块和配置

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 VITE_APP_ROUTER_PREFIX = 'project-name'
 VITE_APP_OUTPUT = './dist/project-name'
 VITE_APP_TITLE_ZH = '项目名称'
+VITE_APP_CHECK_VERSION = 'true'
