--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-plus": "^2.11.1",
     "ky": "^1.9.1",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "radash": "^12.1.1",
     "vue": "^3.5.17",
     "vue-router": "4.5.1"
