--- a/package.json
+++ b/package.json
@@ -14,36 +14,42 @@
     "cz": "git add . && cz",
     "prepare": "husky install"
   },
+  "browserslist": [
+    "defaults, Chrome >= 87"
+  ],
   "dependencies": {
-    "@tabler/icons-vue": "^3.34.0",
-    "@vueuse/core": "^13.4.0",
-    "element-plus": "^2.11.1",
-    "ky": "^1.9.1",
-    "pinia": "^3.0.3",
-    "pinia-plugin-persistedstate": "^4.5.0",
+    "@tabler/icons-vue": "^3.36.1",
+    "@vueuse/core": "^14.1.0",
+    "element-plus": "^2.13.1",
+    "ky": "^1.14.2",
+    "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "radash": "^12.1.1",
-    "vue": "^3.5.17",
-    "vue-router": "4.5.1"
+    "vue": "^3.5.26",
+    "vue-router": "4.6.4"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.16.1",
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "@tailwindcss/vite": "^4.1.11",
-    "@types/node": "^24.0.4",
-    "@vitejs/plugin-vue": "^6.0.0",
-    "@vue/tsconfig": "^0.7.0",
+    "@antfu/eslint-config": "^6.7.3",
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/node": "^25.0.7",
+    "@vitejs/plugin-legacy": "^7.2.1",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "@vue/tsconfig": "^0.8.1",
+    "browserslist": "^4.28.1",
     "commitizen": "^4.3.1",
-    "cz-git": "^1.11.2",
-    "eslint": "^9.29.0",
-    "eslint-plugin-format": "1.0.1",
+    "cz-git": "^1.12.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-format": "1.2.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.2",
-    "tailwindcss": "^4.1.11",
-    "typescript": "^5.8.3",
-    "unplugin-auto-import": "^20.1.0",
-    "unplugin-vue-components": "^29.0.0",
-    "vite": "^7.0.0"
+    "lightningcss": "^1.30.2",
+    "lint-staged": "^16.2.7",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
+    "unplugin-auto-import": "^20.3.0",
+    "unplugin-vue-components": "^30.0.0",
+    "vite": "^7.3.1"
   },
   "config": {
     "commitizen": {
