--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@tailwindcss/vite": "^4.1.18",
+    "@tsconfig/node24": "^24.0.3",
     "@types/node": "^25.0.7",
     "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-vue": "^6.0.3",
