--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,11 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "jsx": "preserve",
-    "lib": ["DOM", "ESNext"],
-    "baseUrl": ".",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "paths": {
-      "@/*": ["src/*"]
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
     },
-    "resolveJsonModule": true,
-    "allowJs": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
-  },
-  "include": ["./*.d.ts", "./src/**/*.js", "./src/**/*.ts", "./src/**/*.vue"]
+    {
+      "path": "./tsconfig.app.json"
+    }
+  ],
+  "files": []
 }
