--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ky": "^1.14.2",
     "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
-    "radash": "^12.1.1",
+    "radashi": "^12.7.1",
     "vue": "^3.5.26",
     "vue-router": "4.6.4"
   },
